adding a query to the api

--- a/src/app/components/search-engines/search-engines.component.html
+++ b/src/app/components/search-engines/search-engines.component.html
@@ -1,11 +1,9 @@
-<!-- http://www.omdbapi.com/?t=star&apikey=abe1a2d8 -->
+ <h1>Search Engines</h1>
  <input type="text" [(ngModel)]="searchText">
  <button (click)="search()">Search</button>
  <div *ngIf="searchText">
    <h2>Search Results for "{{ searchText }}"</h2>
-   <div *ngFor="let movie of searchResults">
-     <h3>{{ movie.Title }}</h3>
-     <p>Year: {{ movie.Year }}</p>
-     <p>Genre: {{ movie.Genre }}</p>
-    </div>
+   <div *ngIf="searchResults.length > 0">
+    <app-movie-card *ngFor="let movie of searchResults" [card]="movie"></app-movie-card>
+
   </div>
