--- a/src/app/components/search-engines/search-engines.component.html
+++ b/src/app/components/search-engines/search-engines.component.html
@@ -1,9 +1,18 @@
- <h1>Search Engines</h1>
- <input type="text" [(ngModel)]="searchText">
- <button (click)="search()">Search</button>
- <div *ngIf="searchText">
-   <h2>Search Results for "{{ searchText }}"</h2>
-   <div *ngIf="searchResults.length > 0">
-    <app-movie-card *ngFor="let movie of searchResults" [card]="movie"></app-movie-card>
+<div class="container mat-elevation-z2">
+  <h1 class="mat-headline-4">Search Engines</h1>
+  
+  <mat-form-field appearance="outline" class="search-field">
+    <mat-label>Search movies</mat-label>
+    <input matInput type="text" [(ngModel)]="searchText">
+    <button mat-icon-button matSuffix (click)="search()">
+      <mat-icon>search</mat-icon>
+    </button>
+  </mat-form-field>
 
+  <div *ngIf="searchText">
+    <h2 class="mat-headline-5">Search Results for "{{ searchText }}"</h2>
+    <div *ngIf="searchResults.length > 0" class="results-grid">
+      <app-movie-card *ngFor="let movie of searchResults" [card]="movie"/>
+    </div>
   </div>
+</div>
