added new style search-engines

--- a/src/app/components/movie-card/movie-card.component.html
+++ b/src/app/components/movie-card/movie-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="example-card" appearance="outlined">
+<mat-card class="card" appearance="outlined">
     <mat-card-header>
       <mat-card-title-group>
         <mat-card-title>{{card['Title']}}</mat-card-title>
@@ -9,4 +9,4 @@
     <mat-card-content>
       {{card['Type']}}
     </mat-card-content>
-  </mat-card>
+</mat-card>
