--- a/src/app/components/search-engines/search-engines.component.html
+++ b/src/app/components/search-engines/search-engines.component.html
@@ -3,7 +3,7 @@
   
   <mat-form-field appearance="outline" class="search-field">
     <mat-label>Search movies</mat-label>
-    <input matInput type="text" [(ngModel)]="searchText">
+    <input matInput type="text" [(ngModel)]="searchText" (keyup)="onEnterPress($event)">
     <button mat-icon-button matSuffix (click)="search()">
       <mat-icon>search</mat-icon>
     </button>
