--- a/src/app/components/movie-card/movie-card.component.html
+++ b/src/app/components/movie-card/movie-card.component.html
@@ -1,12 +1,14 @@
-<mat-card class="card" appearance="outlined">
+<div class="my-8">
+  <mat-card>
     <mat-card-header>
       <mat-card-title-group>
         <mat-card-title>{{card['Title']}}</mat-card-title>
         <mat-card-subtitle>{{card['Year']}}</mat-card-subtitle>
-        <img mat-card-sm-image src="{{card['Poster']}}" >
+        <img class="w-24 !important" src="{{card['Poster']}}">
       </mat-card-title-group>
     </mat-card-header>
     <mat-card-content>
       {{card['Type']}}
     </mat-card-content>
-</mat-card>
+  </mat-card>
+</div>
