--- a/src/app/components/search-engines/search-engines.component.html
+++ b/src/app/components/search-engines/search-engines.component.html
@@ -1,18 +1,19 @@
-<div class="container mat-elevation-z2">
-  <h1 class="mat-headline-4">Search Engines</h1>
-  
-  <mat-form-field appearance="outline" class="search-field">
+<div class="flex justify-center items-center flex-col">
+  <h1 class="text-4xl font-bold mb-4">Search Engines</h1>
+
+  <mat-form-field appearance="outline" class="w-[400px]">
     <mat-label>Search movies</mat-label>
     <input matInput type="text" [(ngModel)]="searchText" (keyup)="onEnterPress($event)">
+    
     <button mat-icon-button matSuffix (click)="search()">
       <mat-icon>search</mat-icon>
     </button>
   </mat-form-field>
 
   <div *ngIf="searchText">
-    <h2 class="mat-headline-5">Search Results for "{{ searchText }}"</h2>
+    <h2 class="text-2xl font-semibold mb-2">Search Results for "{{ searchText }}"</h2>
     <div *ngIf="searchResults.length > 0" class="results-grid">
-      <app-movie-card *ngFor="let movie of searchResults" [card]="movie"/>
+      <app-movie-card class="w-[400px] my-8" *ngFor="let movie of searchResults" [card]="movie" />
     </div>
   </div>
 </div>
