--- a/src/app/components/search-engines/search-engines.component.html
+++ b/src/app/components/search-engines/search-engines.component.html
@@ -12,8 +12,40 @@
 
   <div *ngIf="searchText">
     <h2 class="text-2xl font-semibold mb-2">Search Results for "{{ searchText }}"</h2>
-    <div *ngIf="searchResults.length > 0" class="results-grid">
+    <!-- <div *ngIf="searchResults.length > 0" class="results-grid">
       <app-movie-card class="w-[400px] my-8" *ngFor="let movie of searchResults" [card]="movie" />
-    </div>
+    </div> -->
+    <table mat-table [dataSource]="searchResults" class="mat-elevation-z8">
+
+      <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+    
+      <!-- Position Column -->
+      <ng-container matColumnDef="Type">
+        <th mat-header-cell *matHeaderCellDef>Type</th>
+        <td mat-cell *matCellDef="let element"> {{element['Type']}} </td>
+      </ng-container>
+    
+      <!-- Name Column -->
+      <ng-container matColumnDef="Title">
+        <th mat-header-cell *matHeaderCellDef>Title</th>
+        <td mat-cell *matCellDef="let element"> {{element['Title']}} </td>
+      </ng-container>
+    
+      <!-- Weight Column -->
+      <ng-container matColumnDef="Year">
+        <th mat-header-cell *matHeaderCellDef> Year </th>
+        <td mat-cell *matCellDef="let element"> {{element["Year"]}} </td>
+      </ng-container>
+    
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="Image">
+        <th mat-header-cell *matHeaderCellDef> Image </th>
+        <td mat-cell *matCellDef="let element"><img width="200" src="{{element['Poster']}}" alt="" srcset="">  </td>
+      </ng-container>
+    
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
   </div>
 </div>
