added new movie service

--- a/src/app/components/search-engines/search-engines.component.html
+++ b/src/app/components/search-engines/search-engines.component.html
@@ -15,7 +15,7 @@
     <!-- <div *ngIf="searchResults.length > 0" class="results-grid">
       <app-movie-card class="w-[400px] my-8" *ngFor="let movie of searchResults" [card]="movie" />
     </div> -->
-    <table mat-table [dataSource]="searchResults" class="mat-elevation-z8">
+    <table mat-table [dataSource]="movies" class="mat-elevation-z8">
 
       <!--- Note that these columns can be defined in any order.
             The actual rendered columns are set as a property on the row definition" -->
