--- a/src/app/components/search-engines/search-engines.component.html
+++ b/src/app/components/search-engines/search-engines.component.html
@@ -17,32 +17,52 @@
     </div> -->
     <table mat-table [dataSource]="movies" class="mat-elevation-z8">
 
-      <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->
-    
-      <!-- Position Column -->
-      <ng-container matColumnDef="Type">
-        <th mat-header-cell *matHeaderCellDef>Type</th>
-        <td mat-cell *matCellDef="let element"> {{element['Type']}} </td>
-      </ng-container>
-    
-      <!-- Name Column -->
-      <ng-container matColumnDef="Title">
-        <th mat-header-cell *matHeaderCellDef>Title</th>
-        <td mat-cell *matCellDef="let element"> {{element['Title']}} </td>
-      </ng-container>
-    
-      <!-- Weight Column -->
-      <ng-container matColumnDef="Year">
-        <th mat-header-cell *matHeaderCellDef> Year </th>
-        <td mat-cell *matCellDef="let element"> {{element["Year"]}} </td>
-      </ng-container>
-    
-      <!-- Symbol Column -->
+
       <ng-container matColumnDef="Image">
         <th mat-header-cell *matHeaderCellDef> Image </th>
         <td mat-cell *matCellDef="let element"><img width="200" src="{{element['Poster']}}" alt="" srcset="">  </td>
       </ng-container>
+
+      <ng-container matColumnDef="Title">
+        <th mat-header-cell *matHeaderCellDef>Title</th>
+        <td mat-cell *matCellDef="let element"> {{element['Title']}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Year">
+        <th mat-header-cell *matHeaderCellDef> Year </th>
+        <td mat-cell *matCellDef="let element"> {{element["Year"]}} </td>
+      </ng-container>
+      <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+    
+      <!-- Position Column -->
+      <ng-container matColumnDef="Runtime">
+        <th mat-header-cell *matHeaderCellDef>Runtime</th>
+        <td mat-cell *matCellDef="let element"> {{element['Runtime']}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Genre">
+        <th mat-header-cell *matHeaderCellDef>Genre</th>
+        <td mat-cell *matCellDef="let element"> {{element['Genre']}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Director">
+        <th mat-header-cell *matHeaderCellDef>Director</th>
+        <td mat-cell *matCellDef="let element"> {{element['Director']}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="Plot">
+        <th mat-header-cell *matHeaderCellDef>Plot</th>
+        <td mat-cell *matCellDef="let element"> {{element['Plot']}} </td>
+      </ng-container>
+      <!-- Name Column -->
+     
+    
+      <!-- Weight Column -->
+     
+    
+      <!-- Symbol Column -->
+    
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
