--- a/src/app/components/search-engines/search-engines.component.html
+++ b/src/app/components/search-engines/search-engines.component.html
@@ -3,7 +3,7 @@
 
   <mat-form-field appearance="outline" class="w-[400px]">
     <mat-label>Search movies</mat-label>
-    <input matInput type="text" [(ngModel)]="searchText" (keyup)="onEnterPress($event)">
+    <input matInput type="text" [(ngModel)]="searchText" (keyup)="searchSubject.next(searchText)">
     
     <button mat-icon-button matSuffix (click)="search()">
       <mat-icon>search</mat-icon>
@@ -13,7 +13,7 @@
   <div *ngIf="searchText">
     <h2 class="text-2xl font-semibold mb-2">Search Results for "{{ searchText }}"</h2>
 
-    <table mat-table [dataSource]="movies" class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
 
       <ng-container matColumnDef="Image">
@@ -22,12 +22,12 @@
       </ng-container>
 
       <ng-container matColumnDef="Title">
-        <th mat-header-cell *matHeaderCellDef>Title<mat-icon>arrow_drop_down</mat-icon><mat-icon>arrow_drop_up</mat-icon></th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
         <td mat-cell *matCellDef="let element" class="font-bold"> {{element['Title']}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Year">
-        <th mat-header-cell *matHeaderCellDef> Year <mat-icon>arrow_drop_down</mat-icon><mat-icon>arrow_drop_up</mat-icon></th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Year </th>
         <td mat-cell *matCellDef="let element"> {{element["Year"]}} </td>
       </ng-container>
 
@@ -54,5 +54,6 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   </div>
 </div>
